--- a/college-api/.env.example
+++ b/college-api/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=college
+DB_USERNAME=admin
+DB_PASSWORD=hbT&e252g$RYLPDx!@9a
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
